overflow fix

--- a/frontend/src/assets/sass/main.scss
+++ b/frontend/src/assets/sass/main.scss
@@ -297,6 +297,7 @@ p {
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #2c3e50;
+    overflow: hidden;
     // overflow: hidden;
 }
 
@@ -313,4 +314,6 @@ body {
     background-position: center;
     -webkit-transition: background-image 0.2s ease-in-out;
     transition: background-image 0.6s ease-in-out;
+    overflow: scroll;
+    height: 100vh;
 }
